fix: fix modal window overflow

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1373,8 +1373,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 20px 0;
   background-color: var(--color-overlay);
-  box-shadow: 0px 25px 50px 0px var(--color-primary-15);
   opacity: 1;
   transform: scaleY(1);
   transform-origin: top;
@@ -1397,10 +1397,12 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr;
   min-width: 717px;
+  margin: auto;
   padding: 64px 70px;
   background-color: var(--color-background-1);
   border: 0;
   border-radius: 30px;
+  box-shadow: 0px 25px 50px 0px var(--color-primary-15);
   opacity: 1;
   transition: opacity 0.6s ease-in-out 0.6s;
 }
@@ -1521,6 +1523,7 @@ body {
   justify-content: space-between;
   align-items: center;
   min-height: 48px;
+  margin-bottom: 25px;
 }
 
 .booking-form__visitors-inner {
@@ -1596,7 +1599,7 @@ body {
 }
 
 .booking-form__visitors-input:hover,
-.booking-form__visitors-input:focus {
+.booking-form__visitors-input:focus-visible {
   background-color: var(--color-border);
 }
 
@@ -1605,7 +1608,6 @@ body {
 
 .booking-form__submit {
   grid-column: 1 / -1;
-  margin-top: 25px;
 }
 
 .tooltip {
@@ -1660,6 +1662,6 @@ body {
 }
 
 .tooltip:hover .tooltip__content,
-.tooltip:focus-within .tooltip__content {
+.tooltip:focus-visible .tooltip__content {
   display: block;
 }
